--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,150 @@
-.App {
-  text-align: center;
+* {
+  border: 0;
+  padding: 0;
+  margin: 0;
+  text-decoration: none;
+  text-decoration-style: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  overflow-x: hidden;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+html {
+  font-size: 62.5%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.flex {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+}
+
+.flex-end {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.flex-start {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.flex-col {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column;
+}
+
+.flex-col-end {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  flex-flow: column;
+}
+
+.flex-col-start {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-flow: column;
+}
+
+.pointer {
+  cursor: pointer;
+}
+
+/* FONT SIZE AND WEIGHT*/
+.f1 {
+  font-size: 1rem;
+}
+
+.f1-5 {
+  font-size: 1.5rem;
+}
+
+.f2 {
+  font-size: 2rem;
+}
+
+.f3 {
+  font-size: 3rem;
+}
+
+.f4 {
+  font-size: 4rem;
+}
+
+.f5 {
+  font-size: 5rem;
+}
+
+.f6 {
+  font-size: 6rem;
+}
+
+.fb {
+  font-weight: bolder;
+}
+
+.fbb {
+  font-weight: 900;
+}
+
+.fl {
+  font-weight: lighter;
+}
+
+.fll {
+  font-weight: 100;
+}
+
+/* BACKGROUND AND FOREGROUND COLORS */
+.red {
+  color: red;
+}
+
+.black {
+  color: black;
+}
+
+.white {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.blue {
+  color: #05316F;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Csilver {
+  color: #8E8D8D;
 }
+
+.bg-dark {
+  background-color: black;
+}
+
+.bg-white {
+  background-color: white;
+}
+
+.bg-smoke {
+  background-color: whitesmoke;
+}
+
+.bg-gray {
+  background-color: lightgray;
+}
+
+.bg-blue {
+  background-color: #05316F;
+}
+
+.bg-silver {
+  background-color: #8E8D8D;
+}
+
+
