--- a/src/App.css
+++ b/src/App.css
@@ -124,7 +124,7 @@ html {
 }
 
 .bg-dark {
-  background-color: black;
+  background-color: #35363A;
 }
 
 .bg-white {
@@ -148,3 +148,54 @@ html {
 }
 
 
+
+
+/* Responsiveness */
+
+@media screen and (max-width: 1000px) {
+  html {
+    font-size: 42.5%;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  html {
+    font-size: 52.5%;
+  }
+}
+
+@media screen and (max-width: 1400px) {
+  html {
+    font-size: 62.5%;
+  }
+}
+
+@media screen and (min-width: 1500px) {
+  html {
+    font-size: 70%;
+  }
+}
+
+@media screen and (min-width: 1600px) {
+  html {
+    font-size: 75%;
+  }
+}
+
+@media screen and (min-width: 1700px) {
+  html {
+    font-size: 80%;
+  }
+}
+
+@media screen and (min-width: 1800px) {
+  html {
+    font-size: 85%;
+  }
+}
+
+@media screen and (min-width: 1900px) {
+  html {
+    font-size: 85%;
+  }
+}
